<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single" android:id="@+id/radio_button_group">
        <item
            android:id="@+id/show_all"
            android:title="@string/show_all" />
        <item
            android:id="@+id/show_favs"
            android:title="@string/show_favs" />
    </group>
    <group android:checkableBehavior="all" android:id="@+id/checkbox_group">
        <item
            android:id="@+id/show_stops"
            android:title="@string/show_stops" />
        <item
            android:id="@+id/show_buses"
            android:title="@string/show_buses" />
        <item
            android:id="@+id/show_trams"
            android:title="@string/show_trams" />
    </group>
</menu>